--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,11 @@ body {
     padding: 40px 30px;
     font-size: 20px;
 }
+@media only screen and (max-width: 768px) {
+    .container {
+        width: 80%;
+    }
+}
 input, select {
     width: 100%;
     font-size: 20px;
