--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,6 @@ body {
 .header {
     text-align: center;
 }
-
 .container {
     background-color: rgba(83, 55, 55, 0.7);
     margin: 0 auto;
@@ -23,11 +22,6 @@ body {
     border-radius: 10px;
     padding: 40px 30px;
     font-size: 20px;
-}
-@media only screen and (max-width: 768px) {
-    .container {
-        width: 80%;
-    }
 }
 input, select {
     width: 100%;
@@ -42,8 +36,10 @@ input, select {
     margin-bottom: 10px;
     margin-top: 10px;
 }
-
-.radio-check > input {
+.radio-check label {
+    display: block;
+}
+.radio-check label > input {
     width: auto;
     margin: 10px 10px 10px 0px;
 }
@@ -67,4 +63,19 @@ textarea {
 #submit:hover {
     background-color: #314b31;
     cursor: pointer;
+}
+@media only screen and (max-width: 768px) {
+    .container {
+        width: 80%;
+        font-size: 17px;
+    }
+    input, select {
+        font-size: 17px;
+    }
+    textarea  {
+        font-size: 17px;
+    }
+    #submit {
+        font-size: 17px;
+    }
 }
